--- a/ansible/roles/zion.dns/templates/unbound.conf.j2
+++ b/ansible/roles/zion.dns/templates/unbound.conf.j2
@@ -1,3 +1,5 @@
+{{ ansible_managed }}
+{#
 # Unbound configuration file for Debian.
 #
 # See the unbound.conf(5) man page.
@@ -7,41 +9,44 @@
 #
 # The following line includes additional configuration files from the
 # /etc/unbound/unbound.conf.d directory.
-include: "/etc/unbound/unbound.conf.d/*.conf"
-
-include: "/var/cache/unbound/resolvconf_resolvers.conf"
+#}
+include: "{{ unbound_conf }}"
+include: "{{ unbound_conf.d }}/*.conf"
+{% if include_unbound_resolvers %}
+# resolvconf package config
+include: "{{ unbound_cache }}/resolvconf_resolvers.conf"
+{% endif %}
 
 server:
-    num-threads: 4
-    
+    num-threads: {{ unbound_num_threads }}
+
     # enable logs
     verbosity: 1
 
     # list of root DNS servers
-    root-hints: "/var/lib/unbound/root.hints"
+    root-hints: "{{ unbound_lib_conf }}/root.hints"
 
-    # log file
-    # doesn't work
-    logfile: /var/log/unbound/unbound.log
+    # log file does not seem work
+    logfile: "{{ unbound_log }}/unbound.log"
     log-time-ascii: yes
     log-queries: yes
     # have the validator print validation failures to the log
     val-log-level: 1
-    
+
     # respond to DNS requests on all interfaces
     interface: 0.0.0.0
     interface: ::0
     max-udp-size: 3072
 
-    # IPs authorised to access the DNS Server
-    access-control: 0.0.0.0/0                 refuse
-    access-control: ::/1                      allow
-    access-control: 127.0.0.0/8               allow
-    access-control: 192.168.0.0/24            allow
-    access-control: 10.10.10.0/24             allow
-    access-control: 172.16.0.0/12             allow
+    # IPs authorised to query the DNS Server
+    access-control: 0.0.0.0/0             refuse
+    access-control: ::/1                  allow
+    access-control: 127.0.0.0/8           allow
+    access-control: 192.168.0.0/24        allow
+    access-control: 10.10.10.0/24         allow
+    access-control: 172.16.0.0/12         allow
 
-    # not allowed to be returned for public Internet  names
+    # IPs not allowed to be returned for public Internet names
     private-address: 127.0.0.0/8
     private-address: 10.0.0.0/8
     private-address: 172.16.0.0/12
@@ -50,7 +55,7 @@ server:
     private-address: "fd00::/8"
     private-address: "fe80::/10"
 
-    #hide DNS Server info
+    # hide DNS Server info
     hide-identity: yes
     hide-version: yes
 
@@ -72,10 +77,10 @@ server:
 
 forward-zone:
     name: "."
-    #forward-tls-upstream: yes
+    {# forward-tls-upstream: yes  #}
     forward-addr: 1.1.1.1@53#cloudflare-dns.com # one.one.one.one
     forward-addr: 1.0.0.1@53#cloudflare-dns.com # one.one.one.one
     forward-addr: 8.8.8.8@53 #dns.google
     forward-addr: 8.8.4.4@53 #dns.google
-    forward-addr: 9.9.9.9@53 #dns.quad4.net
+    forward-addr: 9.9.9.9@53 #dns.quad9.net
     forward-addr: 149.112.112.112@53 #dns.quad9.net
