--- a/ansible/roles/zion.traefik/templates/docker-compose.yml.j2
+++ b/ansible/roles/zion.traefik/templates/docker-compose.yml.j2
@@ -1,3 +1,4 @@
+# {{ ansible_managed }}
 ---
 version: '3.7'
 
@@ -51,7 +52,7 @@ services:
       traefik.backend: whoami
       traefik.frontend.rule: 'Host: whoami.{{ ansible_facts['domain'] }}'
       # Only accessible from private network
-      traefik.frontend.whiteList.sourceRange: '127.0.0.1, {{ wireguard_private_ip }}, 192.168.0.0/24'
+      traefik.frontend.whiteList.sourceRange: '127.0.0.1, {{ vpn_private_ip }}, 192.168.0.0/24'
       # Security headers
       traefik.frontend.headers.frameDeny: true
       traefik.frontend.headers.browserXSSFilter: true
