Fix invalid YAML configuration for pomerium

--- a/ansible/roles/zion.pomerium/templates/config.yml.j2
+++ b/ansible/roles/zion.pomerium/templates/config.yml.j2
@@ -18,4 +18,4 @@ authenticate_service_url: "{{ pomerium_url }}"
 metrics_address: "{{ pomerium_prometheus_address }}"
 {% endif %}
 
-policy:
+# policy:
