--- a/ansible/roles/zion.pomerium/templates/config.yml.j2
+++ b/ansible/roles/zion.pomerium/templates/config.yml.j2
@@ -9,6 +9,7 @@ log_level: info
 # proxy: handle the authentification of another service
 services: "authenticate"
 
+# Path for the certificates within the docker container
 certificate_file: "/pomerium/server.cer"
 certificate_key_file: "/pomerium/server.key"
 
@@ -34,10 +35,10 @@ policy:
     to: "https://traefik.{{ ansible_facts['domain'] }}"
     cors_allow_preflight: true
     preserve_host_header: true
-    allowed_users: {{ pomerium_admin_users | to_json }}
+    allowed_users: {{ pomerium_allowed_users | to_json }}
 
   - from: "https://{{ ansible_facts['domain'] }}"
     to: "https://{{ ansible_facts['domain'] }}"
     cors_allow_preflight: true
     preserve_host_header: true
-    allowed_users: {{ pomerium_admin_users | to_json }}
+    allowed_users: {{ pomerium_allowed_users | to_json }}
