--- a/ansible/roles/zion.pomerium/templates/docker-compose.yml.j2
+++ b/ansible/roles/zion.pomerium/templates/docker-compose.yml.j2
@@ -1,3 +1,4 @@
+#jinja2:lstrip_blocks: True
 # {{ ansible_managed }}
 ---
 version: '3.7'
@@ -19,18 +20,19 @@ services:
       - ./server.cer:/pomerium/server.cer:ro
     labels:
       traefik.enable: true
-      traefik.dashboard.backend: pomerium
-      traefik.dashboard.frontend.rule: 'Host: {{ pomerium_auth_url }}'
-      traefik.dashboard.port: 80
-      traefik.dashboard.frontend.whiteList.XForwardedFor: true
+      traefik.pomerium.backend: pomerium
+      traefik.pomerium.frontend.rule: 'Host: auth.{{ ansible_facts['domains'] }}'
+      traefik.pomerium.port: 80
+      {# # Forward the X-Forwarded-For header to Pomerium  #}
+      {# traefik.pomerium.frontend.whiteList.XForwardedFor: true  #}
       {# Security headers #}
-      traefik.dashboard.frontend.headers.frameDeny: true
-      traefik.dashboard.frontend.headers.browserXSSFilter: true
-      traefik.dashboard.frontend.headers.isDevelopment: false
-      traefik.dashboard.frontend.headers.forceSTSHeader: true
-      traefik.dashboard.frontend.headers.STSPreload: true
-      traefik.dashboard.frontend.headers.STSSeconds: 31536000
-      traefik.dashboard.frontend.headers.referrerPolicy: same-origin
+      traefik.pomerium.frontend.headers.frameDeny: true
+      traefik.pomerium.frontend.headers.browserXSSFilter: true
+      traefik.pomerium.frontend.headers.isDevelopment: false
+      traefik.pomerium.frontend.headers.forceSTSHeader: true
+      traefik.pomerium.frontend.headers.STSPreload: true
+      traefik.pomerium.frontend.headers.STSSeconds: 31536000
+      traefik.pomerium.frontend.headers.referrerPolicy: same-origin
       {# End security headers #}
 
 
