Update unbound private domains

--- a/ansible/roles/zion.dns/templates/unbound.conf.d/private-domains.conf.j2
+++ b/ansible/roles/zion.dns/templates/unbound.conf.d/private-domains.conf.j2
@@ -4,11 +4,6 @@ server:
     unblock-lan-zones: yes
     insecure-lan-zones: yes
 
-    # Router
-    local-zone: "router.asus.com." redirect
-    local-data: "router.asus.com IN A 192.168.0.1"
-    local-data-ptr: "192.168.0.1 router.asus.com"
-
     # *.tq.rs → 127.0.0.1
     domain-insecure: "tq.rs"
     private-domain: "tq.rs"
@@ -19,8 +14,12 @@ server:
     
     # *.home and *.lan (192.168.0.0/24)
     private-domain: "home"
-    private-domain: "lan"
     domain-insecure: "home"
-    domain-insecure: "lan"
     local-zone: "home." static
-    local-zone: "lan." static
+
+    private-domain: "lan"
+    domain-insecure: "lan"
+    forward-zone:
+        name: "lan."
+        forward-addr: 192.168.0.1
+        forward-no-cache: yes
